--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,16 +29,8 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-lg px-5">
-      <div id="hour21" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">08</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
-      </div>
-
       <div id="hour09" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">09</div>
+        <div class="col-2 col-md-1 hour text-center py-3">9 AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -46,7 +38,7 @@
       </div>
 
       <div id="hour10" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">10</div>
+        <div class="col-2 col-md-1 hour text-center py-3">10 AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -54,7 +46,7 @@
       </div>
 
       <div id="hour11" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">11</div>
+        <div class="col-2 col-md-1 hour text-center py-3">11 AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -62,7 +54,7 @@
       </div>
 
       <div id="hour12" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">12</div>
+        <div class="col-2 col-md-1 hour text-center py-3">12 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -70,7 +62,7 @@
       </div>
 
       <div id="hour13" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">13</div>
+        <div class="col-2 col-md-1 hour text-center py-3">13 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -78,7 +70,7 @@
       </div>
 
       <div id="hour14" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">14</div>
+        <div class="col-2 col-md-1 hour text-center py-3">14 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -86,7 +78,7 @@
       </div>   
 
       <div id="hour15" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">15</div>
+        <div class="col-2 col-md-1 hour text-center py-3">15 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -94,7 +86,7 @@
       </div>
 
       <div id="hour16" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">16</div>
+        <div class="col-2 col-md-1 hour text-center py-3">16 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -102,7 +94,7 @@
       </div>
 
       <div id="hour17" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">17</div>
+        <div class="col-2 col-md-1 hour text-center py-3">17 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
