--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,7 +29,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-lg px-5">
-      <div id="hour09" class="row time-block">
+      <div id="hour-09" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">9 AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -37,7 +37,7 @@
         </button>
       </div>
 
-      <div id="hour10" class="row time-block">
+      <div id="hour-10" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">10 AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -45,7 +45,7 @@
         </button>
       </div>
 
-      <div id="hour11" class="row time-block">
+      <div id="hour-11" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">11 AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -53,7 +53,7 @@
         </button>
       </div>
 
-      <div id="hour12" class="row time-block">
+      <div id="hour-12" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">12 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -61,40 +61,40 @@
         </button>
       </div>
 
-      <div id="hour13" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">13 PM</div>
+      <div id="hour-13" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">1 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
 
-      <div id="hour14" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">14 PM</div>
+      <div id="hour-14" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">2 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>   
 
-      <div id="hour15" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">15 PM</div>
+      <div id="hour-15" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">3 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
 
-      <div id="hour16" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">16 PM</div>
+      <div id="hour-16" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">4 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
 
-      <div id="hour17" class="row time-block">
-        <div class="col-2 col-md-1 hour text-center py-3">17 PM</div>
+      <div id="hour-17" class="row time-block">
+        <div class="col-2 col-md-1 hour text-center py-3">5 PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
